# polaris

./: .gitignore  LICENSE  README.md  components.json  index.html  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.json  vite.config.ts
src/: App.vue  main.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/crypto/: RSA.rs  aes.rs  keygen.rs  mod.rs
src-tauri/src/crypto_core/: aes.rs  commands.rs  md5.rs  mod.rs  rsa.rs  sha.rs
src-tauri/src/database/: commands.rs  crud.rs  database.rs  mod.rs  table.rs
src-tauri/src/db/: mod.rs  sql.rs
src-tauri/src/file_util/: binary_file_operations.rs  mod.rs  text_file_operations.rs
src-tauri/src/http/: client.rs  commands.rs  interceptor.rs  mod.rs  server.rs
src-tauri/src/http/module/: interceptor.rs  mod.rs
src-tauri/src/setting/: mod.rs  tray_config.rs
src-tauri/src/window/: tray.rs
src/components/ui/breadcrumb/: BreadcrumbEllipsis.vue  BreadcrumbSeparator.vue
src/components/ui/checkbox/: Checkbox.vue
src/components/ui/dropdown-menu/: DropdownMenuCheckboxItem.vue  DropdownMenuRadioItem.vue  DropdownMenuSubTrigger.vue
src/components/ui/navigation-menu/: NavigationMenuTrigger.vue
src/components/ui/sheet/: SheetContent.vue
src/lib/: crypto.ts  database.ts  http.ts  i18n.ts  useTheme.ts
src/pinia/: index.ts
src/router/: index.ts
src/styles/: index.css  index.scss
src/view/: PromptBox.vue
src/view/Home/: index.vue
src/view/Login/: index.vue
(+1 files in other folders)
