[package]
name = "polaris"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "polaris_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-fs = "2"
reqwest = { version = "0.13.4", features = ["json"] }
serde_urlencoded = "0.7"
tokio = "1.52.3"
h2 = "^0.4.14"
rusqlite= {version = "0.40.0", features = ["bundled-windows"] }
ring="0.17.14"
base64 = "0.22.1"
hex = "0.4"
md-5 = "0.10"
sha2 = { version = "0.10", features = ["oid"] }
rsa = { version = "0.9", features = ["pkcs5", "pem"] }
rand = "0.8"
tauri-runtime-wry="2.11.2"
log = "0.4.31"
tauri-plugin-log = "2.8.0"
[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-autostart = "2"
tauri-plugin-updater = "2"
